--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
 
             <div class="input-box">
                 <i class='bx bxs-user'></i>
-                <input type="text" name="username" placeholder="Username" required>
+                <input type="text" name="email" placeholder="email" required>
             </div>
 
             <div class="input-box">
