--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
 
             <div class="input-box">
                 <i class='bx bxs-user'></i>
-                <input type="text" name="email" placeholder="email" required>
+                <input type="text" name="email" placeholder="Email" required>
             </div>
 
             <div class="input-box">
@@ -44,6 +44,25 @@
             </div>
 
             <button type="submit" class="btn">Login</button>
+
+            <!-- OAuth login buttons -->
+            <div class="oauth-section">
+                <div class="divider">
+                    <span>Or sign in with</span>
+                </div>
+                
+                <div class="oauth-buttons">
+                    <a href="{{ url_for('google_login') }}" class="oauth-btn google-btn">
+                        <i class='bx bxl-google'></i>
+                        Sign in with Google
+                    </a>
+                    
+                    <a href="{{ url_for('microsoft_login') }}" class="oauth-btn microsoft-btn">
+                        <i class='bx bxl-microsoft'></i>
+                        Sign in with Microsoft
+                    </a>
+                </div>
+            </div>
 
             <div class="register-link">
                 <p>Don't have an account? <a href="{{ url_for('signup') }}">Register</a></p>
