--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -24,7 +24,7 @@
                 <!-- My Schedule -->
                 <div class="dashboard-card">
                     <h3>My Schedule</h3>
-                    <p>View your assigned teaching sessions</p>
+                    <p>View your assigned teaching modules</p>
                     <div class="card-actions">
                         <a href="{{ url_for('facilitator.view_schedule') }}" class="btn btn-primary">View Schedule</a>
                     </div>
