--- a/templates/manage_availability.html
+++ b/templates/manage_availability.html
@@ -55,7 +55,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Set Your Weekly Availability</h1>
-        <p>Select the time slots when you are available to facilitate sessions.</p>
+        <p>Select the time slots when you are available to facilitate modules.</p>
 
         {% with messages = get_flashed_messages() %}
             {% if messages %}
