--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
             <ul class="navbar-nav ml-auto">
                 {% if g.user %}
                     <li class="nav-item">
-                        <span class="navbar-text">Welcome, {{ g.user.username }}!</span>
+                        <span class="navbar-text">Welcome, {{ g.user.first_name }} {{ g.user.last_name }}!</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
